# navigation-filter-lib

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
include/: DataLoader.hpp  FilterType.hpp  MathUtils.hpp  NavigationFactory.hpp  NavigationParams.hpp  SaveResults.hpp  SystemInitializer.hpp
include/core/: EkfNavigation.hpp  KfNavigation.hpp  NavigationBase.hpp  NavigationCore.hpp  NavigationFilterBase.hpp  RtsSmoother.hpp  UkfNavigation.hpp
include/initializers/: EkfInitializer.hpp  ISystemInitializer.hpp  KfInitializer.hpp  UkfInitializer.hpp
include/params/: EkfParams.hpp  KfParams.hpp  NavParamsBase.hpp  UkfParams.hpp
output/: performance_statistics.txt
output/nav_eval/: performance_report.txt
scripts/: nav_algo_perf_compare.py  nav_visualizer.py  nav_visualizer_awe.py
src/: DataLoader.cpp  NavigationCore.cpp  SaveResults.cpp  SystemInitializer.cpp  main.cpp  main_ekf.cpp  main_kf.cpp  main_ukf.cpp
src/core/: EkfNavigation.cpp  KfNavigation.cpp  RtsSmoother.cpp  UkfNavigation.cpp
src/initializers/: EkfInitializer.cpp  KfInitializer.cpp  UkfInitializer.cpp
tests_old/: CMakeLists.txt  test_data_loader.cpp  test_math_utils.cpp  test_navigation_core.cpp
